@@ -1,3 +1,6 @@
+2024-05-05 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Raise warning if both input databases are the same
+
 2024-04-27 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Refactor progress bar code
 	* Add check_progress unit test
